--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>vCard - Personal Portfolio</title>
+  <title>slash1div</title> <!-- Page Title - CUSTOMIZABLE -->
 
   <!--
     - favicon
   -->
-  <link rel="shortcut icon" href="./assets/images/logo.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="https://crafatar.com/avatars/1a0ed767-5bbd-4f98-8fc9-0c5e44c8ba05?overlay" type="image/x-icon"> <!-- Page Icon / MC UUID - CUSTOMIZABLE -->
 
   <!--
     - custom css link
@@ -42,13 +42,13 @@
       <div class="sidebar-info">
 
         <figure class="avatar-box">
-          <img src="./assets/images/my-avatar.png" alt="Richard hanrick" width="80">
+          <img src="https://crafatar.com/renders/body/1a0ed767-5bbd-4f98-8fc9-0c5e44c8ba05?overlay" alt="Skin Preview" width="80"> <!-- Skin Preview / MC UUID - CUSTOMIZABLE -->
         </figure>
 
         <div class="info-content">
-          <h1 class="name" title="Richard hanrick">Richard hanrick</h1>
+          <h1 class="name" title="slash1div">slash1div</h1> <!-- Name - CUSTOMIZABLE -->
 
-          <p class="title">Web developer</p>
+          <p class="title">Server Developer</p> <!-- Title / Label - CUSTOMIZABLE -->
         </div>
 
         <button class="info_more-btn" data-sidebar-btn>
