--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <div class="sidebar-info">
 
         <figure class="avatar-box">
-          <img src="https://crafatar.com/renders/body/1a0ed767-5bbd-4f98-8fc9-0c5e44c8ba05?overlay" alt="Skin Preview" width="80"> <!-- Skin Preview / MC UUID - CUSTOMIZABLE -->
+          <img style="padding: 20px;" src="https://crafatar.com/renders/body/1a0ed767-5bbd-4f98-8fc9-0c5e44c8ba05?overlay" alt="Skin Preview" width="80"> <!-- Skin Preview / MC UUID - CUSTOMIZABLE -->
         </figure>
 
         <div class="info-content">
