--- a/index.html
+++ b/index.html
@@ -5,7 +5,18 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   <title>slash1div</title> <!-- Page Title - CUSTOMIZABLE -->
+
+  <!-- Discord Embed - CUSTOMIZABLE -->
+  <meta property="og:title" content="IGN: slash1div">
+  <meta name="twitter:title" content="IGN: slash1div">
+  <meta name="theme-color" content="#000000">
+  <meta name="og:image" content="https://crafatar.com/renders/head/1a0ed767-5bbd-4f98-8fc9-0c5e44c8ba05?overlay"> <!-- Page Thumbnail / MC UUID - CUSTOMIZABLE -->
+  <meta name="twitter:image" content="https://crafatar.com/renders/head/1a0ed767-5bbd-4f98-8fc9-0c5e44c8ba05?overlay"> <!-- Page Thumbnail / MC UUID - CUSTOMIZABLE -->
+  <meta property="og:description" content="This site contains all the info you need to know about me!">
+  <meta name="description" content="This site contains all the info you need to know about me!">
+  <meta property="twitter:description" content="This site contains all the info you need to know about me!">
 
   <!--
     - favicon
