--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <title>slash1div</title> <!-- Page Title - CUSTOMIZABLE -->
 
   <!-- Discord Embed - CUSTOMIZABLE -->
+  <link type="application/json+oembed" href="https://embedl.ink/api/oembed?provider_name=slashdiv.swaggy.one&provider_url=https://slashdiv.swaggy.one&author_name=Minecraft Portfolio&author_url=">
   <meta property="og:title" content="IGN: slash1div">
   <meta name="twitter:title" content="IGN: slash1div">
   <meta name="theme-color" content="#000000">
